--- a/eRegistrar_springsec_1/src/main/resources/templates/fragments/header.html
+++ b/eRegistrar_springsec_1/src/main/resources/templates/fragments/header.html
@@ -16,7 +16,7 @@
                     <a class="nav-link" href="/eregistrar/public/virtualtour">Virtual Tour</a>
                 </li>
                 <li sec:authorize="isAuthenticated()" class="nav-item" style="border-left: white 1px solid; padding-left: 2em; padding-right: 2em;">
-                    <a class="nav-link" href="/eregistrar/secured/services">Services</a>
+                    <a class="nav-link" href="/eregistrar/secured/services">Students</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
