--- a/eRegistrar_springsec_1/src/main/resources/templates/secured/services.html
+++ b/eRegistrar_springsec_1/src/main/resources/templates/secured/services.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div layout:fragment="content" style="padding-top:1em;" class="container">
-        <h3>eLibrary<sup>&reg;</sup> Services</h3>
+        <h3>eRegistrar<sup>&reg;</sup> Students</h3>
         <hr/>
         <div style="font-size: 1em">
             <p>Select the service you want from the option(s) presented below.</p>
