--- a/eRegistrar_springsec_1/src/main/resources/templates/secured/list.html
+++ b/eRegistrar_springsec_1/src/main/resources/templates/secured/list.html
@@ -1,51 +1,23 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+      layout:decorate="~{layouts/master-layout}">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="">
-    <meta name="author" content="O. Kalu">
-    <link rel="icon" href="favicon.ico">
-    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.2/cerulean/bootstrap.min.css" rel="stylesheet" integrity="sha384-EmRcsPP774S9MOi4ywB+JXUWjYnBdyInMzG2XsC5siZEUpexqxOMJW358dCYEjPu" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/master.css}">
-    <title>eRegistrar - a demo spring boot webapp featuring CRUD - List Students</title>
+    <title>The eRegistrar - a Spring Security Demo webapp - Home</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a style="padding-right: 2em;" class="navbar-brand" href="/home">eRegistrar : : : a CRUD demo webapp</a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarColor01">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item" style="border-left: white 1px solid; padding-left: 2em; padding-right: 2em;">
-                    <a class="nav-link" href="/eregistrar/student/list">Students</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <span style="color:#fff;padding-left: 2em; padding-right: 1em;">Welcome, Guest</span>
-                <!--<a style="color: #ffffff; margin-right: 0em;" class="nav-link" href="#">John Doe</a>-->
-                <!--<input class="form-control mr-sm-2" type="text" placeholder="Search">-->
-                <a href="#" class="btn btn-secondary">Sign In</a>
-            </form>
-        </div>
-    </nav>
 
 
-
-
-                    <div style="margin-top:1em;margin-bottom:1em;" class="container">
+    <div style="margin-top:1em;margin-bottom:1em;" class="container">
         <div>
             <span style="font-size: 2em; color: #32a5e7;">Students in our Collection</span>
             <span style="float:right;">
-                <a class="btn btn-outline-success btn-lg" href="/eregistrar/student/new">Add a new student</a>
+                <a class="btn btn-outline-success btn-lg" href="/eregistrar/secured/services/new">Add a new student</a>
             </span>
         </div>
         <!-- Search panel -->
-        <form id="searchStudentForm" method="get" action="/eregistrar/student/search">
+        <form id="searchStudentForm" method="get" action="/eregistrar/secured/services/search">
             <div style="margin-top:1em;" class="row">
                 <div class="col-md-12">
                     <div class="input-group">
@@ -97,10 +69,6 @@
         </div>
     </div>
 
-
-
-
-
     <!-- Modal -->
   <!--   <div class="modal fade" id="confirmDeleteBookModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -133,9 +101,11 @@
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+     Placed at the end of the document so the pages load faster
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <th:block layout:fragment="footer"></th:block>
+
 </body>
 </html>
